--- a/my_template/templates/pages/summary.html
+++ b/my_template/templates/pages/summary.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% load custom_filters %}
 {% block title %}
-    <title>Executive Summary</title>
+    <title>Summary</title>
 {% endblock title %}
 
 {% block content %}
 <div class="container-fluid mt-4">
-    <h2 class="text-center">Executive Summary</h2>
+    <h2 class="text-center">Summary</h2>
 
     <!-- Summary Cards -->
     <div class="row text-center">
