--- a/my_template/templates/partials/wbs_table.html
+++ b/my_template/templates/partials/wbs_table.html
@@ -3,7 +3,7 @@
   {% for category, category_data in summary_data.items %}
   <div class="card shadow mt-4">
     <div class="card-body">
-      <h5 class="text-center text-primary">{{ category|title }} Budget and Usage</h5>
+      <h5 class="text-center text-primary text-uppercase">{{ category|title }} Budget and Usage</h5>
 
       <div class="table-responsive">
         <table class="table table-bordered text-center">
