--- a/my_template/templates/base.html
+++ b/my_template/templates/base.html
@@ -48,7 +48,7 @@
 <div class="wrapper">
   <header class="top-header">
     <nav class="navbar navbar-expand-xl navbar-light bg-light px-0">
-        <div class="container-fluid">
+        <div class="container-fluid mx-auto">
             <!-- Logo -->
             <a class="navbar-brand d-flex ge-2 align-items-center" href="{% url 'home' %}">
                 <img src="{% static 'images/logo.gif' %}" alt="Logo" style="height: 50px;">
@@ -61,7 +61,7 @@
             </button>
             
             <!-- Navigation Links -->
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse " id="navbarNav">
                 {% if request.session.user_info %}
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
@@ -120,7 +120,7 @@
                 </ul>
                 {% endif %}
                 <!-- User Profile / Login -->
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     {% if request.session.user_info %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -175,7 +175,7 @@
   <script src="{% static 'plugins/perfect-scrollbar/js/perfect-scrollbar.js' %}"></script>
   <script src="{% static 'js/pace.min.js' %}"></script>
   <script src="{% static 'plugins/vectormap/jquery-jvectormap-2.0.2.min.js' %}"></script>
-	<script src="{% static 'plugins/vectormap/jquery-jvectormap-world-mill-en.js' %}"></script>
+<script src="{% static 'plugins/vectormap/jquery-jvectormap-world-mill-en.js' %}"></script>
   <script src="{% static 'plugins/apexcharts-bundle/js/apexcharts.min.js' %}"></script>
   <script src="{% static 'plugins/datatable/js/jquery.dataTables.min.js' %}"></script>
   <script src="{% static 'plugins/datatable/js/dataTables.bootstrap5.min.js' %}"></script>
